[project]
name = "codeexplorer"
version = "0.10.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "ibm-watsonx-ai==1.3.20",
    "ollama>=0.4.8",
    "openai>=1.78.1",
    "rich>=14.0.0",
]

[tool.uv]
package = true

[project.scripts]
codeexplorer = "codeexplorer.codeexplorer:main"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion="3.12"

[tool.ruff]
line-length = 77
